--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Situs Aman (Palsu)</title>
-    <script src="inject.js"></script> <!-- Nanti file ini yang ngerusak -->
-</head>
-<body>
-    <h1>Selamat datang di Situs Resmi!</h1>
-    <button onclick="executeInjection()">[ INJECT ]</button> <!-- Tombol maut -->
-</body>
-</html>
+<script src="inject.js"></script>
+<script src="modified.js"></script>
